# This file documents the revision history for Perl extension Catalyst.

5.8000
        - Port to Moose
        - Added test for action stringify
        - Added test for component instances getting $self->{value} from config.

5.7XXXXXX XXXX
        - Fix some Win32 test failures
        - Add pt translation of error message (wreis)
        - Make :Chained('../action') work (Florian Ragwitz)

5.7099_03 2008-07-20 10:10:00
        - Fix regressions for regexp fallback in model(), view() and controller()
        - Added the supplied argument to the regexp fallback warning for easier
          debugging
        - Ensure ACCEPT_CONTEXT is called for results from component()

5.7099_02 2008-07-16 19:10:00
        - Added PathPrefix attribute
        - Removed Catalyst::Build; we've long since moved to Module::Install
        - Updated Catalyst::Test docs to mention the use of HTTP::Request
          objects (Rafael Kitover)

5.7099_01 2008-06-25 22:36:00
        - Refactored component resolution (component(), models(), model(), et al). We now
          throw warnings for two reasons:
          1) model() or view() was called with no arguments, and two results are returned
             -- set default_(model|view), current_(model|view) or current_(model|view)_instance
             instead
          2) you call a component resolution method with a string, and it resorts to a regexp 
             fallback wherein a result is returned -- if you really want to search, call the
             method with a regex as the argument
        - remove 0-length query string components so warnings aren't thrown (RT #36428)
        - Update HTTP::Body dep so that the uploadtmp config value will work (RT #22540)
        - Fix for LocalRegex when used in the Root controller
        - Get some of the optional_* tests working from dirs with spaces (RT #26455)
        - Fix Catalyst::Utils::home() when application .pm is in the current dir (RT #34437)